/*
 * Copyright 2020-2020 Exactpro (Exactpro Systems Limited)
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";
package th2;

import "th2/infra.proto";
import "th2/rhbatch.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "com.exactpro.th2.act.grpc";


message ActResponse {

    enum ExecutionStatus {
        SUCCESS = 0;
        ACT_ERROR = 1;
        HAND_ERROR = 2;
        COMPILE_ERROR = 3;
        EXECUTION_ERROR = 4;
    }

    ExecutionStatus scriptStatus = 1;
    string statusInfo = 2;
    string errorInfo = 3;
    map<string, string> data = 4;
    RhSessionID sessionID = 5;
}
